# pipeliner

./: LICENSE  README.md  pipeline.exe.lnk  pyproject.toml
input/: id.xlsx  sample.xlsx
model/: id_id_relation.csv  info.csv  sample.csv
notebooks/: map.html  run_01.ipynb  run_02.ipynb
output/: id_info_value.csv  id_info_value_geometry.geojson  id_value.csv  map.html  sample.csv
pipeline/: __init__.py  __main__.py  main_pyinstaller.py  pipeline.py
pipeliner/: __init__.py  __main__.py  main_pyinstaller.py  pipeliner.py
